Fixed the loading of leagues config from file and created a file that hosts common functionality

--- a/backend/standings/config/standings_config.json
+++ b/backend/standings/config/standings_config.json
@@ -13,7 +13,7 @@
       }
     },
     "Spain": {
-      "laliga": {
+      "laliga1": {
         "id": 140,
         "name": "Primera Division",
         "type": "league"
