Increasing pytest verbosity

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,4 @@ jobs:
           pip install -r backend/requirements.txt
 
       - name: Run tests with pytest
-        run: python -m pytest
+        run: python -m pytest -v
