--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,7 @@ jobs:
         with:
           python-version: 3.8
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      - name: Install dependencies
+      - name: Install dependencies with pip
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
