--- a/backend/log_config.yaml
+++ b/backend/log_config.yaml
@@ -2,20 +2,25 @@ version: 1
 formatters:
   simple:
     format: '%(asctime)s - %(name)s - %(levelname)s - %(message)s'
+  detailed:
+    format: '%(asctime)s - %(levelname)s - File: %(filename)s - %(funcName)s() -  %(message)s'
 handlers:
   console:
     class: logging.StreamHandler
     level: DEBUG
-    formatter: simple
+    formatter: detailed
     stream: ext://sys.stdout
-#  file:
-#    class: logging.FileHandler
-#    level: INFO
-#    formatter: simple
-#    filename: standings/standings.log
-#    encoding: utf8
-#    mode: w
+  file:
+    class: logging.handlers.TimedRotatingFileHandler
+    level: DEBUG
+    formatter: simple
+    filename: 'logs/standings.log'
+    encoding: utf8
+    when: 'midnight'
+    utc: True
+    backupCount: 5
 
 root:
   level: DEBUG
-  handlers: [console]
+  handlers: [console, file]
+  propagate: true
