Removing virtual environment set up within Docker and running with native python inside Docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,17 +3,14 @@ FROM python:3.8-alpine
 RUN adduser -D standings_user
 WORKDIR /home/backend
 
-COPY requirements.txt requirements.txt
-
-RUN python -m venv venv
-RUN pip install -r requirements.txt
-RUN venv/bin/pip install -r requirements.txt
-RUN venv/bin/pip install gunicorn
-
 RUN echo 'Copying files ...'
 COPY standings/ ./standings/
 COPY app_config.yaml app_config.yaml
 COPY log_config.yaml log_config.yaml
+COPY requirements.txt requirements.txt
+
+RUN echo 'Installing dependencies ...'
+RUN pip install -r requirements.txt
 
 RUN chmod +x standings/run.sh
 
