Deploy step name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy Artifacts
-      - run: echo "deploy step"
+        run: echo "deploy step"
