--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -36,6 +36,16 @@ services:
       - 6379
     networks:
       - db_network
+  nginx:
+    image: "nginx:1.21.1-alpine"
+    container_name: "nginx"
+    volumes:
+      - ./nginx/reverse_proxy.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "8080:80"
+    restart: always
+    networks:
+      - route_network
   standings:
     image: standings
     container_name: standings
@@ -46,9 +56,11 @@ services:
       - mongodb
     networks:
       - db_network
+      - route_network
 volumes:
   data: {}
 networks:
   default:
     name: mongodb_network
   db_network: {}
+  route_network: {}
