--- a/backend/nginx/reverse_proxy.conf
+++ b/backend/nginx/reverse_proxy.conf
@@ -1,13 +1,30 @@
+upstream static_standings {
+   server standings:5000;
+}
+
 server {
     listen       80;
     listen  [::]:80;
     server_name  localhost;
 
     #access_log  /var/log/nginx/host.access.log  main;
+#
+#     location ~* ^/standings/(.*) {
+#         return 301 http://standings:5000/standings/$1$is_args$args;
+#     }
+#     location /standings/ {
+#         proxy_pass   http://standings:5000/standings/$1/$2;
+#     }
 
-    location /standings/league/season {
-        proxy_pass   http://standings:5000$request_uri;
+    location ~* ^/standings/(.*) {
+      proxy_pass http://static_standings/$1$is_args$args;
     }
+
+#         location / {
+#         if ($args ~* "/standings?param1=val1&param2=val2") {
+#             rewrite ^ http://standings:5000/standings/$arg_param1/$arg_param2? last;
+#         }
+#     }
 
     #error_page  404              /404.html;
 
