--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: centos-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -38,7 +38,7 @@ jobs:
 
   deploy:
     # The deployment will be done here
-    runs-on: ubuntu-latest
+    runs-on: centos-latest
     steps:
       - name: Deploy Artifacts
         run: echo "deploy step"
