Refactoring the docker file and the start up script

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,15 @@
 FROM python:3.9-alpine
 
-RUN echo 'Running upgrades ...'
 RUN apk -U upgrade
 
 RUN adduser -D standings_user
-WORKDIR /home/backend
+WORKDIR /app/backend
 
-RUN echo 'Copying files ...'
 COPY standings/ ./standings/
 COPY app_config.yaml app_config.yaml
 COPY log_config.yaml log_config.yaml
 COPY requirements.txt requirements.txt
 
-RUN echo 'Installing dependencies ...'
 RUN pip install -r requirements.txt
 
 RUN chmod +x standings/run.sh
@@ -21,4 +18,4 @@ RUN chown -R standings_user:standings_user ./
 USER standings_user
 
 EXPOSE 5000
-ENTRYPOINT ["standings/run.sh"]
+CMD ["/bin/sh", "standings/run.sh"]
